# giphybot

./: .gitignore  Dockerfile  Makefile  ProductionDockerfile  README.md  giphybot.cabal  stack.yaml
src/: Main.hs
