name:                giphybot
version:             0.1.0.0
synopsis:            GiphyBot for Telegram
license:             GPL-2
license-file:        LICENSE
author:              San Gillis
maintainer:          gillis.san@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable giphybot
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       telegram >=0.1 && <0.2,
                       Hiphy >=0.1 && <0.2,
                       Spock >=0.7,
                       transformers,
                       http-types,
                       text,
                       data-default,
                       url
  hs-source-dirs:      src
  default-language:    Haskell2010
  -- ghc-options:         -static -optc-static -optl-static
